# weather-ai-pipeline

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REBUILD.md  SECURITY.md  config.py  docker-compose.yml  dvc.yaml  nginx.conf  pyproject.toml  requirements-dashboard.txt  requirements.txt  run_api.py  run_chat.py  run_monitor.py  run_pipeline.py  stations.json  trace_pipeline.py  workspace.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.streamlit/: config.toml
dagster_pipeline/: __init__.py  checks.py  hooks.py  io_manager.py  resources.py  schedules.py  sensors.py
data/: training_export.parquet
docs/: gencast-integration-plan-v2.md  gencast-integration-plan.md  gencast-temp-validation.md  mos-retrain-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
metrics/: mos_metrics.json
models/: hybrid_mos.json
pipeline-runner/: Dockerfile  entrypoint.py
scripts/: batch_pipeline.py  debug_neuralgcm.py  export_training_data.py  gencast_load_batch.py  gencast_load_test.py  populate_farmer_profiles.py  trace_pipeline.py  train_mos.py
src/: agents.py  api.py  architecture.py  auth.py  daily_scheduler.py  database.py  event_bus.py  forecasting.py  gencast_client.py  graphcast_client.py  healing.py  health.py  ingestion.py  logging_config.py  models.py  monitor.py  neuralgcm_client.py  pipeline.py  quality_checks.py  scheduler.py  weather_clients.py  webhook_receiver.py
streamlit_app/: app.py  chat_widget.py  data_helpers.py  style.py
tests/: conftest.py  eval_advisory.py  (+12 more)
(+136 files in other folders)
