[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-ai-pipeline"
version = "2.0.0"
description = "AI-powered weather forecasting pipeline for smallholder farmers in Kerala and Tamil Nadu"
requires-python = ">= 3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "duckdb>=0.10.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "imdlib>=0.1.21",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.7.0",
    "langchain-huggingface>=0.0.3",
    "rank-bm25>=0.2.2",
    "anthropic>=0.34.0",
    "certifi>=2024.0.0",
    "pydantic>=2.6.0",
    "streamlit>=1.35.0",
    "pydeck>=0.9.0",
    "pandas>=2.0.0",
    "apscheduler>=3.10.0",
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "pre-commit>=3.7",
    "ruff>=0.4.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: long-running evaluation scripts",
    "offline: runs without external API keys",
    "api: requires ANTHROPIC_API_KEY or other API credentials",
    "live: hits live external services (AWS, HF, etc.); opt-in via env flag",
]
filterwarnings = [
    "ignore::DeprecationWarning:apscheduler.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.setuptools.packages.find]
include = ["src*", "config*"]
